STIJ-236: Fixed breadcrumb wrapping issue and markup.

--- a/components/21-atoms/headings/heading-1/_heading-1.scss
+++ b/components/21-atoms/headings/heading-1/_heading-1.scss
@@ -5,7 +5,7 @@ h1,
     color: $heading-1-color;
 
     a {
-      @include element-states($heading-1-color, $heading-1-color-hover);
+      @include element-states($link-color, $link-color-hover);
     }
   }
 
