--- a/components/21-atoms/headings/heading-3/_heading-3.scss
+++ b/components/21-atoms/headings/heading-3/_heading-3.scss
@@ -5,7 +5,7 @@ h3,
     color: $heading-3-color;
 
     a {
-      @include element-states($heading-3-color, $heading-3-color-hover);
+      @include element-states($link-color, $link-color-hover);
     }
   }
 
